--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -536,6 +536,7 @@
   <string name="PassphrasePromptActivity_watermark_content_description">Значок Signal</string>
   <string name="PassphrasePromptActivity_ok_button_content_description">Подтвердить парольную фразу</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Неверная парольная фраза!</string>
+  <string name="PassphrasePromptActivity_unlock_signal">Разблокировать Signal</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Карта</string>
   <string name="PlacePickerActivity_not_a_valid_address">Недействительный адрес</string>
@@ -1369,7 +1370,7 @@
   <string name="InsightsDashboardFragment__encrypted_messages">Зашифрованные сообщения</string>
   <string name="InsightsDashboardFragment__cancel">Отменить</string>
   <string name="InsightsDashboardFragment__send">Отправить</string>
-  <string name="InsightsDashboardFragment__not_using_signal_yet">Ещё не использует Signal</string>
+  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__not_using_signal_yet">Ещё не использует Signal</string> -->
   <string name="InsightsModalFragment__title">Представляем «Выводы»</string>
   <string name="InsightsModalFragment__description">Узнайте, сколько из ваших исходящих сообщений было отправлено безопасно, а затем быстро пригласите новые контакты, чтобы увеличить ваш процент Signal.</string>
   <string name="InsightsModalFragment__view_insights">Просмотреть выводы</string>
