--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -470,6 +470,7 @@
   <string name="PassphrasePromptActivity_watermark_content_description">Signal ikonası</string>
   <string name="PassphrasePromptActivity_ok_button_content_description">Şifrə ifadəsini təqdim et</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Səhv şifrə ifadəsi!</string>
+  <string name="PassphrasePromptActivity_unlock_signal">Signal-ın Kilidini Aç</string>
   <!--PlacePickerActivity-->
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Quraşdırdığın Google Play Servis versiyası düzgün işləmir. Zəhmət olmasa Google Play Servisini yenidən quraşdır və sına.</string>
