--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -472,6 +472,7 @@
   <string name="PassphrasePromptActivity_watermark_content_description">Signal икона</string>
   <string name="PassphrasePromptActivity_ok_button_content_description">Задай паролата</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Грешна парола!</string>
+  <string name="PassphrasePromptActivity_unlock_signal">Отключи Signal</string>
   <!--PlacePickerActivity-->
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Версията на Google Play Services, която сте инсталирали не функционира правилно. Моля, преинсталирайте Google Play Services и опитайте пак.</string>
