--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -504,6 +504,7 @@
   <string name="PassphrasePromptActivity_watermark_content_description">Signal ikona</string>
   <string name="PassphrasePromptActivity_ok_button_content_description">Pošaljite lozinku</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Neispravna lozinka!</string>
+  <string name="PassphrasePromptActivity_unlock_signal">Otključaj Signal</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Mapa</string>
   <string name="PlacePickerActivity_not_a_valid_address">Ne važeća adresa</string>
