--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -498,6 +498,7 @@
   <string name="PassphrasePromptActivity_watermark_content_description">Signal-ikon</string>
   <string name="PassphrasePromptActivity_ok_button_content_description">Skicka lösenord</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Fel lösenord!</string>
+  <string name="PassphrasePromptActivity_unlock_signal">Lås upp Signal</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Karta</string>
   <string name="PlacePickerActivity_not_a_valid_address">Inte en giltig adress</string>
@@ -1278,6 +1279,7 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="reminder_header_share_text">Ju fler av dina vänner som använder Signal, desto bättre blir det.</string>
   <string name="reminder_header_service_outage_text">Signal upplever tekniska problem. Vi arbetar för fullt för att återställa tjänsten så snabbt som möjligt.</string>
   <string name="reminder_header_the_latest_signal_features_wont_work">De senaste Signal-funktionerna fungerar inte på den här versionen av Android. Uppgradera denna enhet för att få framtida Signal uppdateringar.</string>
+  <string name="reminder_header_progress">%1$d %%</string>
   <!--media_preview-->
   <string name="media_preview__save_title">Spara</string>
   <string name="media_preview__forward_title">Vidarebefordra</string>
@@ -1294,9 +1296,19 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="trimmer__deleting_old_messages">Tar bort gamla meddelanden…</string>
   <string name="trimmer__old_messages_successfully_deleted">Gamla meddelanden har tagits bort</string>
   <!--Insights-->
+  <string name="Insights__percent">%</string>
+  <string name="Insights__title">Statistik</string>
+  <string name="InsightsDashboardFragment__title">Statistik</string>
+  <string name="InsightsDashboardFragment__youre_just_getting_started">Du har precis kommit igång. Statistik kommer att visas efter att du har skickat några meddelanden.</string>
+  <string name="InsightsDashboardFragment__start_a_conversation">Starta en konversation</string>
+  <string name="InsightsDashboardFragment__encrypted_messages">Krypterade meddelanden</string>
   <string name="InsightsDashboardFragment__cancel">Avbryt</string>
   <string name="InsightsDashboardFragment__send">Skicka</string>
+  <string name="InsightsModalFragment__title">Introducerar Statistik</string>
+  <string name="InsightsModalFragment__view_insights">Visa Statistik</string>
   <string name="FirstInviteReminder__title">Bjud in till Signal</string>
+  <string name="SecondInviteReminder__description">Bjud in %1$s</string>
+  <string name="InsightsReminder__view_insights">Visa Statistik</string>
   <string name="InsightsReminder__invite">Bjud in</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Transportikon</string>
