--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -489,6 +489,7 @@
   <string name="PassphrasePromptActivity_watermark_content_description">Значок Signal</string>
   <string name="PassphrasePromptActivity_ok_button_content_description">Ввести фразу-пароль</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Хибна фраза-пароль!</string>
+  <string name="PassphrasePromptActivity_unlock_signal">Розблокувати Signal</string>
   <!--PlacePickerActivity-->
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Встановлена версія сервісів Google Play працює некоректно. Перевстановіть сервіси Google Play та спробуйте знову.</string>
